--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -43,6 +43,10 @@
     <label for="remark">備考：</label>
     <input type="text" id="remark" th:field="*{student.remark}"/>
   </div>
+  <div>
+    <label for="isDeleted">キャンセル：</label>
+    <input type="checkbox" id="isDeleted" th:field="*{student.deleted}"/>
+  </div>
   <div th:each="course, stat : *{studentCourses}">
     <label for="courseId" th:for="studentCourse.__${stat.index}__.id">受講コースID：</label>
     <input type="text" id="courseId" th:id="studentCourse.__${stat.index}__.id"
